force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag_Work_Metadata__c/agf__ADM_Product_Tag_Work_Metadata__c.object-meta.xml
<CustomObject>
    <label>Product Tag Work Metadata</label>
    <nameField>
        <displayFormat>PTM-{0000}</displayFormat>
        <label>Product Tag Work Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tag Work Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>