force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag_Work_Metadata__c/fields/agf__Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Tag</label>
    <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Product Tag Work Metadata</relationshipLabel>
    <relationshipName>Product_Tag_Work_Metadata</relationshipName>
    <type>Lookup</type>
</CustomField>