force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag_Work_Metadata__c/fields/agf__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>