force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Product_Tag_Work_Metadata__c/fields/agf__Work_Metadata__c.field-meta.xml
<CustomField>
    <fullName>agf__Work_Metadata__c</fullName>
    <label>Work Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>